fix: fix mnemonics

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <p>
                 <b>Task description:&nbsp;</b><i>Write a&nbsp;function that converts any sentence into a&nbsp;V&nbsp;A P&nbsp;O&nbsp;R&nbsp;W&nbsp;A&nbsp;V&nbsp;E sentence; a&nbsp;V&nbsp;A&nbsp;P&nbsp;O&nbsp;R&nbsp;W&nbsp;A&nbsp;V&nbsp;E sentence converts all the letters into uppercase, and adds 2&nbsp;spaces between each letter (or&nbsp;special character) to&nbsp;create this V&nbsp;A&nbsp;P&nbsp;O&nbsp;R&nbsp;W&nbsp;A&nbsp;V&nbsp;E effect. Note that spaces should be&nbsp;ignored in&nbsp;this case.</i>
               </p>
-              <code>const vaporcode = (string) => string.replace(/\s/g,'').toUpperCase().split('').join('');</code>
+              <code>const vaporcode = (string) =&gt; string.replace(/\s/g,&apos;&apos;).toUpperCase().split(&apos;&apos;).join(&apos;&apos;);</code>
             </section>
             <section class="experience" id="experience">
               <h2>Experience</h2>
